--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,5 @@ test:
 production:
   <<: *default
   database: study_app_production
-  username: study_app
+  username: root
   password: <%= ENV['STUDY_APP_DATABASE_PASSWORD'] %>
